src/objects/Banner_Slide__c.object
<CustomObject>
    <fields>
        <fullName>Alt_Text__c</fullName>
        <label>Alt_Text</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Autoplay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autoplay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Banner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner</label>
        <referenceTo>Banner__c</referenceTo>
        <relationshipLabel>Banner Slides</relationshipLabel>
        <relationshipName>Banner_Slides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Button_URL__c</fullName>
        <label>Button_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Caption_Location_Left__c</fullName>
        <label>Caption_Location_Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caption_Location_Top__c</fullName>
        <label>Caption_Location_Top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HTML_Text__c</fullName>
        <label>HTML_Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Focus_Location_Left__c</fullName>
        <label>Image_Focus_Location_Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_Focus_Location_Right__c</fullName>
        <label>Image_Focus_Location_Right</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image_URL</label>
        <type>Url</type>
    </fields>
    <label>Banner Slide</label>
    <nameField>
        <label>Banner_Slide Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banner Slides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>